# k8s-inspector

./: .dockerignore  .gitignore  Dockerfile  README.md  k8s-fault-diagnosis-design.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  diagnoses.py  discovery.py  inspections.py  keywords.py  overview.py  saved_targets.py  settings.py  templates.py  whitelists.py
backend/app/core/: config.py  pathing.py  runtime_paths.py
backend/app/db/: init_db.py  session.py
backend/app/engine/: matcher.py
backend/app/models/: __init__.py  diagnosis_record.py  fault_template.py  inspection_record.py  keyword_rule.py  saved_inspection_target.py  system_setting.py  whitelist.py
backend/app/providers/: base.py  factory.py  kubernetes_provider.py  mock_provider.py
backend/app/schemas/: common.py  diagnosis.py  inspection.py  keyword.py  overview.py  saved_target.py  settings.py  template.py  whitelist.py
backend/app/services/: __init__.py  diagnosis_service.py  discovery_service.py  inspection_service.py  keyword_service.py  overview_service.py  pod_health.py  saved_target_service.py  settings_service.py  template_service.py  whitelist_service.py
backend/tests/: conftest.py  test_contract_models.py  test_diagnosis_api.py  test_discovery_api.py  test_inspection_api.py  test_kubernetes_provider.py  test_matcher.py  test_overview_api.py  test_saved_targets_api.py  test_settings_api.py  test_static_app.py  test_template_api.py  test_whitelist_api.py
frontend/: index.html  package-lock.json  (+3 more)
(+167 files in other folders)
