[project]
name = "k8s-inspector-backend"
version = "0.1.0"
description = "K8s Inspector backend skeleton"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "kubernetes>=36.0.0,<37.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
